tmux.conf updated 2025

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,8 +117,8 @@ set -g pane-border-status 'top'
 
 # statusbar
 set -g status-style 'bg=colour234 fg=colour250'
-set -g status-left '#[fg=colour228,bg=colour234] #S ' # sesion name
-set -g status-right '#[fg=colour250,bg=colour236] %d %b %H:%M ' # date/clock
+set -g status-left '#[fg=colour228,bg=colour234] #S ' # session name
+set -g status-right '#[fg=colour250,bg=colour32] %d %b %H:%M ' # date/clock
 set -g status-right-length 50
 set -g status-left-length 50
 
